--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,11 @@ on:
       - main
     types: [opened, reopened]
 jobs:
-  Backend:
-    name: Push InfraServer to Docker Hub
+  Server:
+    name: Push server package to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v4
-          with:
-          go-version: '1.21.4'
       - name: Login to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
@@ -24,12 +21,12 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          context: ./packages/server
-          file: ./packages/server/Dockerfile
+          context: .
+          file: ./Dockerfile.server
           tags: ${{ secrets.SERVER_PACKAGE_IMAGE }}
           push: true
   notification:
-    needs: [Backend]
+    needs: [Server]
     name: Send notification
     runs-on: ubuntu-latest
     steps:
