--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,18 @@ jobs:
           push: true
   CLI:
     name: Build CLI binary and upload S3
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
+        with:
+          go-version: 1.21.4
+      - run: |
+          CGO_ENABLED=0 GOOS=linux go build -C ./packages/cli
+          bash ./deployment/aws-config.sh ${{ secrets.AWS_ACCESS_KEY }} ${{ secrets.AWS_SECRET_ACCESS_KEY }} ${{ secrets.AWS_ZONE }} && \
+          bash ./deployment/accounting-cli-upload.sh ${{ secrets.CLI_S3_URL }}
   notification:
-    needs: [Server]
+    needs: [Server, CLI]
     name: Send notification
     runs-on: ubuntu-latest
     steps:
