--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
-          file: ./Dockerfile.server
+          file: ./deployment/Dockerfile.server
           tags: ${{ secrets.SERVER_PACKAGE_IMAGE }}
           push: true
   CLI:
