--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-    types: [opened, reopened]
+  # pull_request:
+  #   branches:
+  #     - main
+  #   types: [opened, reopened]
 jobs:
   Server:
     name: Push server package to Docker Hub
