--- a/deployment/Dockerfile.server
+++ b/deployment/Dockerfile.server
@@ -1,7 +1,15 @@
-FROM golang:1.21.4
+FROM golang:1.21.4 as build-stage
 
 WORKDIR /app
 
 COPY / ./
 RUN CGO_ENABLED=0 GOOS=linux go build -C /app/packages/server
+
+FROM ubuntu:22.04
+RUN apt-get update && apt-get install gnupg curl unzip -y
+WORKDIR /
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+RUN unzip awscliv2.zip
+RUN ./aws/install
+COPY --from=build-stage / /
 CMD ["/app/packages/server/server"]
