chore: tech debt after launch

--- a/packages/cli/Makefile
+++ b/packages/cli/Makefile
@@ -4,14 +4,8 @@ start:
 	go run main.go
 
 build:
-	alias cli="/home/kletskov02/Software/accounting/packages/cli"
+	alias cli="/home/kletskov02/.accounting/cli"
 	go build
-
-watch:
-	nodemon --watch './**/*.go' --signal SIGTERM --exec 'go' build 
-
-
-docker:
-	docker build . -t kletskovg/test
-docker_run:
-	docker run kletskovg/test
+	cp ./cli ~/.accounting/cli
+	cp ./config.env ~/.accounting/config.env
+	rm ./cli
