DB isolation and CI linters

--- a/packages/server/Makefile
+++ b/packages/server/Makefile
@@ -5,3 +5,9 @@ start:
 
 build:
 	go build
+
+test:
+	ACC_DB_URL="mongodb://localhost:27017/" ACC_DB_NAME=test ACC_DB_COLLECTION=test  go test  ./...
+
+test_mongo:
+	sudo docker run -p 27017:27017 mongo:latest
